[project]
name = "status"
version = "0.0.2"
authors = [
  { name="David Stainton", email="dstainton415@gmail.com" },
]
description = "A status html page generator for katzenpost mix networks"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Topic :: Security :: Cryptography",
]
dependencies = [
  "katzenpost_thinclient>=0.0.3",
  "build==1.2.2.post1",
  "cbor2>=5.6.2",
  "cffi==1.17.1",
  "click==8.1.7",
  "coloredlogs==15.0.1",
  "cryptography==44.0.1",
  "humanfriendly==10.0",
  "markdown-it-py==3.0.0",
  "mdurl==0.1.2",
  "packaging==24.1",
  "pprintpp==0.4.0",
  "pycparser==2.22",
  "Pygments==2.18.0",
  "pyproject_hooks==1.2.0",
  "rich==13.9.3",
  "tomli==2.0.2",
]

[project.urls]
Homepage = "https://github.com/katzenpost/status"
Issues = "https://github.com/katzenpost/status/issues"

[project.scripts]
status = "status.status:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
